--- a/react-frontend/src/index.css
+++ b/react-frontend/src/index.css
@@ -12,6 +12,10 @@ header {
     font-family: sans-serif;
 }
 
+body { 
+    background-color: #aaacad; 
+}
+
 h1 {
     font-size: 18px;
     padding: 10px;
